package com.geometricdrawing.command;

public interface Command {

    void execute();
    //TODO undo();
}
